--- a/package.json
+++ b/package.json
@@ -4,17 +4,34 @@
   "description": "A react based grid system using flexbox",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint '**/*.js'",
+    "lint:fix": "prettier-eslint **/*.js --write"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/emanualjade/react-flexgrid.git"
   },
-  "keywords": ["react", "grid", "flexbox", "css"],
+  "keywords": [
+    "react",
+    "grid",
+    "flexbox",
+    "css"
+  ],
   "author": "Emanual Jade",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/emanualjade/react-flexgrid/issues"
   },
-  "homepage": "https://github.com/emanualjade/react-flexgrid#readme"
+  "homepage": "https://github.com/emanualjade/react-flexgrid#readme",
+  "devDependencies": {
+    "eslint": "^6.1.0",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-standard": "^4.0.0",
+    "prettier-eslint": "^9.0.0",
+    "prettier-eslint-cli": "^5.0.0"
+  }
 }
