--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A react based grid system using flexbox",
   "main": "index.js",
   "scripts": {
+    "prebuild": "rimraf dist",
+    "build": "rollup -c",
     "lint": "eslint '**/*.js'",
     "lint:fix": "prettier-eslint **/*.js --write"
   },
@@ -35,6 +37,9 @@
   },
   "homepage": "https://github.com/emanualjade/react-flexgrid#readme",
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
     "eslint": "^6.1.0",
     "eslint-config-standard": "^13.0.1",
     "eslint-plugin-import": "^2.18.2",
@@ -45,6 +50,14 @@
     "husky": "^3.0.2",
     "lint-staged": "^9.2.1",
     "prettier-eslint": "^9.0.0",
-    "prettier-eslint-cli": "^5.0.0"
+    "prettier-eslint-cli": "^5.0.0",
+    "react": "^16.8.6",
+    "rimraf": "^2.6.3",
+    "rollup": "^1.18.0",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-node-resolve": "^5.2.0"
+  },
+  "dependencies": {
+    "rollup-plugin-terser": "^5.1.1"
   }
 }
